// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapses big diffs to patch format 1`] = `
"<green>- Expected</>
<red>+ Received</>

@@ -6,9 +6,9 @@
</><dim>     4,
<dim>     5,
<dim>     6,
<dim>     7,
<dim>     8,
<red>+    10,</>
<dim>     9,
<green>-    10,</>
<dim>   ],
<dim> }"
`;

exports[`falls back to not call toJSON 1`] = `
"<dim>Compared values serialize to the same structure.
Printing internal object structure without calling \`toJSON\` instead.

<green>- Expected</>
<red>+ Received</>

<dim> <dim>Object {
<red>+</><red>  \\"key\\": Object {</>
<dim> <dim>    \\"line\\": 2,
<red>+</><red>  },</>
<dim> <dim>  \\"toJSON\\": [Function toJSON],
<dim> <dim>}"
`;

exports[`falls back to not call toJSON if objects look identical 1`] = `
"<dim>Compared values serialize to the same structure.
Printing internal object structure without calling \`toJSON\` instead.

<green>- Expected</>
<red>+ Received</>

<dim> <dim>Object {
<green>-</><green>  \\"line\\": 1,</>
<red>+</><red>  \\"line\\": 2,</>
<dim> <dim>  \\"toJSON\\": [Function toJSON],
<dim> <dim>}"
`;

exports[`prints a fallback message if two objects truly look identical 1`] = `"<dim>Compared values have no visual difference."`;
